--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#000000</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#3F51B5</color>
+    <color name="btnColorPrimary">#31b0d5</color>
+    <color name="btnColorPrimaryDark">#2E6DA4</color>
+    <color name="white">#FFFFFFFF</color>
 </resources>
