--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,8 @@
     <color name="btnColorPrimary">#31b0d5</color>
     <color name="btnColorPrimaryDark">#2E6DA4</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="orange">#f0ad4e</color>
+    <color name="red">#d9534f</color>
+    <color name="green">#5cb85c</color>
+    <color name="grey">#CCCCCC</color>
 </resources>
