--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="red">#d9534f</color>
     <color name="green">#5cb85c</color>
     <color name="grey">#CCCCCC</color>
+    <color name="black">#000000</color>
 </resources>
