--- a/app/src/main/res/layout-land/activity_lobby.xml
+++ b/app/src/main/res/layout-land/activity_lobby.xml
@@ -53,7 +53,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/to_stats"
-                android:layout_above="@id/submit_chat"
+                android:layout_above="@+id/submit_chat"
                 tools:listitem="@layout/chat_entry"
                 android:background="@drawable/border"
                 android.support.v7.recyclerview:stackFromEnd ="true">
