Bætti við margin bottom á takka á lobby og minnkaði hæðina á þeim úr wrap_content í 30dp.

--- a/app/src/main/res/layout-land/list_item_lobby.xml
+++ b/app/src/main/res/layout-land/list_item_lobby.xml
@@ -14,7 +14,8 @@
         android:background="@color/orange"
         android:layout_centerVertical="true"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"/>
+        android:layout_marginRight="10dp"
+        android:textColor="@color/white"/>
 
     <RelativeLayout
         android:id="@+id/lobby_view_player_one"
