--- a/app/src/main/res/layout-land/activity_lobby.xml
+++ b/app/src/main/res/layout-land/activity_lobby.xml
@@ -29,24 +29,26 @@
             <Button
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="30dp"
                 android:text="@string/btn_to_stats"
                 android:id="@+id/to_stats"
                 android:layout_alignParentRight="true"
                 android:layout_marginLeft="6dp"
                 android:layout_marginRight="6dp"
                 android:textColor="@color/white"
-                android:background="@color/colorPrimaryDark"/>
+                android:background="@color/colorPrimaryDark"
+                android:layout_marginBottom="6dp"/>
 
             <Button
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="30dp"
                 android:text="@string/btn_to_trophy"
                 android:id="@+id/to_trophy"
                 android:layout_toLeftOf="@id/to_stats"
                 android:background="@color/colorPrimaryDark"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:layout_marginBottom="6dp"/>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/chat_list"
