--- a/app/src/main/res/layout-land/fragment_lobby_list.xml
+++ b/app/src/main/res/layout-land/fragment_lobby_list.xml
@@ -8,12 +8,14 @@
     <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:text="@string/btn_to_new_game"
         android:id="@+id/to_new_game"
         android:layout_marginLeft="6dp"
         android:layout_marginRight="6dp"
-        android:background="@color/green"/>
+        android:background="@color/green"
+        android:textColor="@color/white"
+        android:layout_marginBottom="6dp"/>
 
     <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
