--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="green">#5cb85c</color>
     <color name="grey">#CCCCCC</color>
     <color name="black">#000000</color>
+    <color name="darkGrey">#999999</color>
 </resources>
