--- a/app/src/main/res/layout-land/chat_entry.xml
+++ b/app/src/main/res/layout-land/chat_entry.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:background="@drawable/xthin_border"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:weightSum="10">
+              android:layout_height="match_parent"
+              android:gravity="center"
+              android:weightSum="10">
         <TextView
             android:id="@+id/chat_entry"
             android:layout_width="wrap_content"
@@ -18,5 +15,4 @@
             android:inputType="textLongMessage"
             android:textStyle="bold"
             android:textColor="@color/darkGrey"/>
-    </TableRow>
-</LinearLayout>
+</TableRow>
