Færði switch takka úr fragments yfir í lobby og tengdi þá í lobby. Ef smellt er á switch takka þá skiptist á milli annaðhvort list eða setup match fragmenta.

--- a/app/src/main/res/layout-land/activity_lobby.xml
+++ b/app/src/main/res/layout-land/activity_lobby.xml
@@ -48,7 +48,21 @@
                 android:layout_toLeftOf="@id/to_stats"
                 android:background="@color/colorPrimaryDark"
                 android:textColor="@color/white"
-                android:layout_marginBottom="6dp"/>
+                android:layout_marginBottom="6dp"
+                android:layout_marginLeft="6dp"/>
+
+            <ImageButton
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:text="@string/btn_to_new_game"
+                android:id="@+id/btn_swap"
+                android:contentDescription="@string/swap_description"
+                android:layout_marginLeft="6dp"
+                android:background="@drawable/ic_swap_horiz"
+                android:textColor="@color/white"
+                android:layout_marginBottom="6dp"
+                android:layout_alignParentLeft="true"/>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/chat_list"
