--- a/app/src/main/res/layout-land/chat_entry.xml
+++ b/app/src/main/res/layout-land/chat_entry.xml
@@ -8,7 +8,7 @@
               android:weightSum="10">
         <TextView
             android:id="@+id/chat_entry"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="10"
             android:text="@string/chat_testMsg"
