--- a/app/src/main/res/layout-land/list_item_lobby.xml
+++ b/app/src/main/res/layout-land/list_item_lobby.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        tools:text="Observe"
+        tools:text="Watch"
         android:background="@color/orange"
         android:layout_centerVertical="true"
         android:layout_marginLeft="10dp"
