--- a/app/src/main/res/layout/fragment_present_match.xml
+++ b/app/src/main/res/layout/fragment_present_match.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="school.throstur.backgammonandroid.Fragments.PresentMatchFragment">
+    tools:context=".Fragments.TrophyFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
