--- a/app/src/main/res/layout-land/fragment_lobby_list.xml
+++ b/app/src/main/res/layout-land/fragment_lobby_list.xml
@@ -9,7 +9,7 @@
     <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:id="@+id/lobby_recycler_view"
-                                            android:layout_width="match_parent"
+                                            android:layout_width="wrap_content"
                                             android:layout_height="match_parent"
                                             tools:listitem="@layout/list_item_lobby">
 
