--- a/app/src/main/res/layout-land/trophy_entry.xml
+++ b/app/src/main/res/layout-land/trophy_entry.xml
@@ -48,14 +48,14 @@
             <ImageView
                 android:layout_width="200dp"
                 android:layout_height="200dp"
-                android:src="@drawable/goldcup"
+                android:src="@drawable/trophy_icon"
                 android:id="@+id/trophy_entry_img"
                 />
         </RelativeLayout>
     </RelativeLayout>
 
     <ProgressBar
-        style="?android:attr/progressBarStyleLarge"
+        style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/trophy_entry_progbar"
