--- a/app/src/main/res/layout-land/trophy_entry.xml
+++ b/app/src/main/res/layout-land/trophy_entry.xml
@@ -61,8 +61,9 @@
         android:id="@+id/trophy_entry_progbar"
         android:layout_weight="1"
         android:layout_gravity="bottom"
-        android:progress="50"
         android:max="100"
-        />
+        android:progress="25"
+        android:layout_marginLeft="80dp"
+        android:layout_marginRight="80dp"/>
 
 </LinearLayout>
