Uppfært in game og lobby útlit, bætti við nýjum icons og fínt. Tengdi leave_match og time_left í ingame activity.

--- a/app/src/main/res/layout-land/activity_in_game.xml
+++ b/app/src/main/res/layout-land/activity_in_game.xml
@@ -11,16 +11,16 @@
         android:id="@+id/ingame_fragment_container"
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:layout_weight="3">
+        android:layout_weight="1">
 
     </FrameLayout>
 
     <FrameLayout
         android:id="@+id/ingame_sidebar_container"
-        android:layout_weight="12"
+        android:layout_weight="3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        android:background="@color/black">
 
         <Button
             style="?android:attr/buttonStyleSmall"
@@ -28,15 +28,38 @@
             android:layout_height="wrap_content"
             android:text="@string/leave_match"
             android:id="@+id/btn_leave_match"
-            android:layout_marginTop="6dp"
-            android:layout_marginBottom="6dp"/>
+            android:layout_marginTop="20dp"
+            android:textColor="@color/white"
+            android:background="@color/red"
+            android:layout_gravity="center_horizontal"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp"/>
 
-        <TextView
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Small Text"
-            android:id="@+id/textView"/>
+            android:layout_gravity="center">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/sidebar_clock_img"
+                android:contentDescription="@string/clock_image_description"
+                android:src="@drawable/ic_action_clock_white"
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/example_time_left"
+                android:id="@+id/time_left"
+                android:textColor="@color/white"
+                android:layout_toRightOf="@+id/sidebar_clock_img"
+                android:layout_centerInParent="true"
+                android:layout_marginLeft="6dp"/>
+        </RelativeLayout>
     </FrameLayout>
 </LinearLayout>
 
