--- a/app/src/main/res/layout-land/stats_entry.xml
+++ b/app/src/main/res/layout-land/stats_entry.xml
@@ -50,6 +50,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/stats_progbar_pawn"
+            android:progress="100"
+            android:max="200"
             android:layout_centerInParent="true"/>
 
         <ImageView
